* Unfinished files now have a slightly different naming scheme (thanks garg)
* Added default unfinished folder (thanks garg)
* When matching queue, users marked with file not available are readded (thanks farcry)
* Added (limited support for) magnet link handling (thanks garg)
* Uninstaller now removes the one registry key DC++ creates (thanks garg)
* Fixed a few link click bugs (thanks garg)

 -- 0.403 2004-06-27 --
* Fixed 100% cpu / crash bug

 -- 0.402 2004-06-27 --
* Fixed transfer view crash (thanks garg)
* Removed default sort in search frame
* Window sizes / positions of favorite hubs saved (thanks trem)
* Begun work on the ADC protocol (major change)
* Fixed issue with the exceptioninfo growing indefinately (recursive behaviour)
* Readded missing TTHSearch to hub $Supports
* Fixed unnecessary $MyINFO being sent out
* Removed time left and speed from waiting transfers (thanks garg)
* Documented %[line:reason]
* Fixed a bug with hanging queue display
* When searching by hash, size mode set to normal (don't care)
* Hash speed tweaks, check if it's any better.
* Fixed a crash when moving files
* Fixed directory sorting in directory listings
* Fixed an unnecessary disconnect on file not available
* Fixed missing write buffering
* Added drag-drop of directories onto the shared dirs view (thanks trem)
* Added option for specifying max hashing speed
* Updated installer to optionally create a backup of the settings when upgrading
* Changed to a more convenient observer implementation (no, not a functor (or something more fancy) based one)
* Fixed an invalid XML file list crash
* Copy address to clipboard from public hub list (thanks joakim tosteberg)
* Changed to IEC binary multiple units (MiB, KiB etc)
* GETSETREF templetized (thanks farcry)
* Small files size increased to 64KiB
* Op's that use a client that supports minislots always get a minislot (for small files / xml file lists), 
  regardless of how many minislots are already taken.