@@ -685,6 +685,7 @@ BEGIN
     "D",            IDC_QUEUE,              VIRTKEY, CONTROL, NOINVERT
     "S",            IDC_SEND_MESSAGE,       VIRTKEY, ALT, NOINVERT
     "E",            IDC_REFRESH_FILE_LIST,  VIRTKEY, CONTROL, NOINVERT
+    "Q",            ID_FILE_QUICK_CONNECT,  VIRTKEY, CONTROL, NOINVERT
 END
 
 IDR_PUBLICHUBS ACCELERATORS 
