@@ -417,6 +417,13 @@
 			</File>
 			<File
 				RelativePath=".\client\StringDefs.h">
+				<FileConfiguration
+					Name="Debug|Win32">
+					<Tool
+						Name="VCCustomBuildTool"
+						CommandLine=".\vc7\$(ConfigurationName)\MakeDefs\MakeDefs.exe .\client\StringDefs.h .\client\StringDefs.cpp .\Example.xml"
+						Outputs=".\client\StringDefs.cpp"/>
+				</FileConfiguration>
 			</File>
 			<File
 				RelativePath="client\StringSearch.h">
