@@ -70,6 +70,7 @@ public:
 		LOG_FILELIST_TRANSFERS, SEND_UNKNOWN_COMMANDS, MAX_HASH_SPEED,
 		GET_USER_COUNTRY, FAV_SHOW_JOINS, LOG_STATUS_MESSAGES, SHOW_STATUSBAR,
 		SHOW_TOOLBAR, SHOW_TRANSFERVIEW, POPUNDER_PM, POPUNDER_FILELIST, MAGNET_ASK, MAGNET_ACTION, MAGNET_REGISTER,
+		ADD_FINISHED_INSTANTLY,
 		INT_LAST };
 
 	enum Int64Setting { INT64_FIRST = INT_LAST + 1,
@@ -187,6 +188,6 @@ private:
 
 /**
  * @file
- * $Id: SettingsManager.h,v 1.65 2004/08/02 14:20:16 arnetheduck Exp $
+ * $Id: SettingsManager.h,v 1.66 2004/08/02 15:29:19 arnetheduck Exp $
  */
 
