@@ -6,6 +6,7 @@ string ResourceManager::strings[] = {
 "Enabled / Search String", 
 "&Add", 
 "Added", 
+"Add finished files to share instantly (if shared)", 
 "Add To Favorites", 
 "Address already in use", 
 "Address not available", 
@@ -77,7 +78,7 @@ string ResourceManager::strings[] = {
 "Downloading public hub list...", 
 "Downloads", 
 "Duplicate file will not be shared: ", 
-"Dupe matched against: ",
+"Dupe matched against: ", 
 "Duplicate source", 
 "Edit", 
 "E-Mail", 
@@ -180,6 +181,7 @@ string ResourceManager::strings[] = {
 "&Notepad\tCtrl+N", 
 "Open file list...", 
 "&Public Hubs\tCtrl+P", 
+"&Quick Connect ...\tCtrl+Q", 
 "&Reconnect\tCtrl+R", 
 "Refresh file list\tCtrl+E", 
 "Show", 
@@ -258,6 +260,7 @@ string ResourceManager::strings[] = {
 "Private message from ", 
 "&Properties", 
 "Public Hubs", 
+"Quick Connect", 
 "Ratio", 
 "Re-add source", 
 "Really exit?", 
@@ -382,7 +385,7 @@ string ResourceManager::strings[] = {
 "Note; because of changing download speeds, this is not 100% accurate...", 
 "View status messages in main chat", 
 "Tab completion of nicks in chat", 
-"Set hub/PM tab bold when contents change",
+"Set hub/PM tab bold when contents change", 
 "Show timestamps in chat by default", 
 "Unfinished downloads directory (empty = download directly to target)", 
 "Sharing", 
@@ -460,6 +463,7 @@ string ResourceManager::names[] = {
 "ActiveSearchString", 
 "Add", 
 "Added", 
+"AddFinishedInstantly", 
 "AddToFavorites", 
 "AddressAlreadyInUse", 
 "AddressNotAvailable", 
@@ -531,7 +535,7 @@ string ResourceManager::names[] = {
 "DownloadingHubList", 
 "Downloads", 
 "DuplicateFileNotShared", 
-"DuplicateMatch",
+"DuplicateMatch", 
 "DuplicateSource", 
 "Edit", 
 "Email", 
@@ -634,6 +638,7 @@ string ResourceManager::names[] = {
 "MenuNotepad", 
 "MenuOpenFileList", 
 "MenuPublicHubs", 
+"MenuQuickConnect", 
 "MenuReconnect", 
 "MenuRefreshFileList", 
 "MenuShow", 
@@ -712,6 +717,7 @@ string ResourceManager::names[] = {
 "PrivateMessageFrom", 
 "Properties", 
 "PublicHubs", 
+"QuickConnect", 
 "Ratio", 
 "ReaddSource", 
 "ReallyExit", 
@@ -836,7 +842,7 @@ string ResourceManager::names[] = {
 "SettingsSpeedsNotAccurate", 
 "SettingsStatusInChat", 
 "SettingsTabCompletion", 
-"SettingsTabDirty",
+"SettingsTabDirty", 
 "SettingsTimeStamps", 
 "SettingsUnfinishedDownloadDirectory", 
 "SettingsUploads", 
