@@ -9,6 +9,7 @@ enum Strings { // @DontAdd
 	ACTIVE_SEARCH_STRING, // "Enabled / Search String"
 	ADD, // "&Add"
 	ADDED, // "Added"
+	ADD_FINISHED_INSTANTLY, // "Add finished files to share instantly (if shared)"
 	ADD_TO_FAVORITES, // "Add To Favorites"
 	ADDRESS_ALREADY_IN_USE, // "Address already in use"
 	ADDRESS_NOT_AVAILABLE, // "Address not available"
@@ -183,6 +184,7 @@ enum Strings { // @DontAdd
 	MENU_NOTEPAD, // "&Notepad\tCtrl+N"
 	MENU_OPEN_FILE_LIST, // "Open file list..."
 	MENU_PUBLIC_HUBS, // "&Public Hubs\tCtrl+P"
+	MENU_QUICK_CONNECT, // "&Quick Connect ...\tCtrl+Q"
 	MENU_RECONNECT, // "&Reconnect\tCtrl+R"
 	MENU_REFRESH_FILE_LIST, // "Refresh file list\tCtrl+E"
 	MENU_SHOW, // "Show"
@@ -261,6 +263,7 @@ enum Strings { // @DontAdd
 	PRIVATE_MESSAGE_FROM, // "Private message from "
 	PROPERTIES, // "&Properties"
 	PUBLIC_HUBS, // "Public Hubs"
+	QUICK_CONNECT, // "Quick Connect"
 	RATIO, // "Ratio"
 	READD_SOURCE, // "Re-add source"
 	REALLY_EXIT, // "Really exit?"
