@@ -108,6 +108,7 @@ public:
 	void UpdateLayout(BOOL bResizeBars = TRUE);
 	void removeDir(HTREEITEM ht);
 	void setPriority(HTREEITEM ht, const QueueItem::Priority& p);
+	void changePriority(bool inc);
 
 	LRESULT onItemChangedQueue(int /*idCtrl*/, LPNMHDR pnmh, BOOL& /*bHandled*/) {
 		NMLISTVIEW* lv = (NMLISTVIEW*)pnmh;
@@ -139,6 +140,12 @@ public:
 		NMLVKEYDOWN* kd = (NMLVKEYDOWN*) pnmh;
 		if(kd->wVKey == VK_DELETE) {
 			removeSelected();
+		} else if(kd->wVKey == VK_ADD){
+			// Increase Item priority
+			changePriority(true);
+		} else if(kd->wVKey == VK_SUBTRACT){
+			// Decrease item priority
+			changePriority(false);
 		} else if(kd->wVKey == VK_TAB) {
 			onTab();
 		}
@@ -452,5 +459,5 @@ private:
 
 /**
  * @file
- * $Id: QueueFrame.h,v 1.40 2004/07/26 20:01:22 arnetheduck Exp $
+ * $Id: QueueFrame.h,v 1.41 2004/08/02 15:29:19 arnetheduck Exp $
  */
